<resources>
    <string name="app_name">POCPositionMotionLayout</string>
    <string name="all_easy_account">Conta Easynvest</string>
    <string name="home_see_my_investments">Ver meus investimentos</string>
    <string name="all_my_investments">Meus investimentos</string>
    <string name="all_my_patrimony">Meu patrimônio</string>
    <string name="label_total_invested">Total Investido</string>
    <string name="home_general_error_title">Calma, está tudo bem</string>
    <string name="home_general_error_description">seus investimentos continuam seguros, mas não conseguimos montar agora por problemas técnicos.</string>
    <string name="try_again">Tentar novamente</string>
    <string name="all_profitability">Rentabilidade</string>
    <string name="home_continue_investing">Continuar investindo</string>
    <string name="home_see_profitability">Ver rentabilidade</string>
    <string name="home_profitability_disclaimer">Sua rentabilidade é calculada em até 2 dias úteis anteriores e seus investimentos só rendem nos dias úteis</string>
    <string name="home_profitability_history_title">Meses Anteriores</string>
    <string name="home_menu_easy_account">Conta Easynvest</string>
    <string name="home_menu_easy_account_description">Dinheiro pra investir, resgatar e como depositar</string>
    <string name="home_menu_invite_friends">Indique e ganhe</string>
    <string name="home_menu_invite_friends_description">Indique a Easy e ganhe benefícios exclusivos</string>
    <string name="home_menu_loan">Crédito</string>
    <string name="home_menu_loan_description">Dinheiro na mão, sem precisar mexer nos investimentos</string>
</resources>