<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/medium_margin"
    android:paddingTop="@dimen/medium_margin"
    android:paddingEnd="@dimen/medium_margin"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.mauricio.poc.position.components.PositionView2
                android:id="@+id/patrimonyView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.mauricio.poc.position.components.ProfitabilityView
                android:id="@+id/profitabilityView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/patrimonyView" />

            <com.mauricio.poc.position.components.OtherMenuView
                android:id="@+id/otherMenuViewEasyAccount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_margin"
                app:layout_constraintEnd_toStartOf="@+id/otherMenuViewInviteFriends"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profitabilityView"
                app:other_menu_description="@string/home_menu_easy_account_description"
                app:other_menu_icon="@drawable/ic_coin"
                app:other_menu_title="@string/home_menu_easy_account" />

            <com.mauricio.poc.position.components.OtherMenuView
                android:id="@+id/otherMenuViewInviteFriends"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/otherMenuViewEasyAccount"
                app:layout_constraintTop_toTopOf="@+id/otherMenuViewEasyAccount"
                app:other_menu_description="@string/home_menu_invite_friends_description"
                app:other_menu_icon="@drawable/ic_gift"
                app:other_menu_isNew="true"
                app:other_menu_title="@string/home_menu_invite_friends" />

            <View
                android:id="@+id/gap"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/otherMenuViewEasyAccount" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>