<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_profitability_view">

    <TextView
        android:id="@+id/textViewProfitabilityTitle"
        style="@style/FontMedium.Paragraph1"
        android:layout_width="wrap_content"
        android:text="@string/all_profitability"
        android:visibility="invisible"
        android:textColor="@color/awaken"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/topGuideline" />

    <ImageView
        android:id="@+id/imageViewExpandable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:padding="@dimen/small_margin"
        android:src="@drawable/ic_navigation_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewProfitabilityDate"
        style="@style/FontLight.Paragraph1"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/textViewProfitabilityTitle"
        tools:text="Março 2020" />

    <TextView
        android:id="@+id/textViewProfitabilityPeriod"
        style="@style/FontLight.Caption"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/textViewProfitabilityDate"
        tools:text="Rendimento de 03 a 19/03" />

    <TextView
        android:id="@+id/textViewProfitabilityValue"
        style="@style/FontMedium.Subtitle"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/textViewProfitabilityPeriod"
        tools:text="+ R$ 956,00"
        tools:textColor="@color/dark_rise" />

    <TextView
        android:id="@+id/textViewProfitabilityPercentage"
        style="@style/FontMedium.Subtitle"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/medium_margin"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/textViewProfitabilityValue"
        app:layout_constraintTop_toTopOf="@id/textViewProfitabilityValue"
        tools:text="+ 2,78%"
        tools:textColor="@color/dark_rise" />

    <TextView
        android:id="@+id/textViewProfitabilityDisclaimer"
        style="@style/FontLight.Caption"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/home_profitability_disclaimer"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/textViewProfitabilityValue" />

    <TextView
        android:id="@+id/textViewProfitabilityLink"
        style="@style/FontMedium.Link"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/home_see_profitability"
        app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintTop_toBottomOf="@+id/textViewProfitabilityDisclaimer" />

    <ImageView
        android:id="@+id/imageViewStickerMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/home_profitability_no_content_vertical_margin"
        android:importantForAccessibility="no"
        android:src="@drawable/sticker_money"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintStart_toEndOf="@+id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/textViewProfitabilityTitle"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textViewMessage"
        style="@style/FontLight.Paragraph2"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/home_profitability_no_content_vertical_margin"
        android:gravity="center_horizontal|bottom"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintStart_toEndOf="@+id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/imageViewStickerMoney"
        tools:text="Legal que você investiu! O próximo passo é esperar dois dias úteis para acompanhar sua rentabilidade!" />

    <Button
        android:id="@+id/gregButtonContinueInvesting"
        android:layout_width="@dimen/home_profitability_button_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/home_continue_investing"
        app:layout_constraintBottom_toTopOf="@+id/bottomGuideline"
        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
        app:layout_constraintStart_toEndOf="@+id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/textViewMessage" />

    <include
        android:id="@+id/layoutProfitabilityError"
        layout="@layout/layout_generic_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/textViewProfitabilityTitle" />

    <ProgressBar
        android:id="@+id/progressBarLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupProfitabilitySuccessful"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="textViewProfitabilityDate,textViewProfitabilityPeriod,textViewProfitabilityValue,textViewProfitabilityPercentage,textViewProfitabilityLink,imageViewExpandable,textViewProfitabilityDisclaimer" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupProfitabilityNoContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="imageViewStickerMoney,textViewMessage,gregButtonContinueInvesting" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/home_card_padding" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/home_card_padding" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/home_card_padding" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/home_card_padding" />

</androidx.constraintlayout.widget.ConstraintLayout>